log-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: logging
  annotations:
    k8s.ovn.org/acl-logging: '{ "deny": "alert", "allow": "alert" }'
