client-aghnost-8081.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-agnhost-8081
  labels:
    app: webserver-agnost
spec:
   containers:
    - name: client-agnhost
      image: k8s.gcr.io/e2e-test-images/agnhost:2.26
      args: ["netexec", "--http-port=8081"]
      ports:
       - name: cluster-net
         containerPort: 8081
         protocol: TCP
   nodeSelector:
     kubernetes.io/hostname: ovn-worker2
