client-aghnost-host-net.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-agnhost-host-networked
  labels:
    app: webserver-agnost
spec:
   containers:
    - name: client-agnhost-host-networked
      image: k8s.gcr.io/e2e-test-images/agnhost:2.26
      args: ["netexec", "--http-port=8080"]
      ports:
       - name: host-net
         containerPort: 8080
         protocol: TCP
   nodeSelector:
     kubernetes.io/hostname: ovn-worker2
   hostNetwork: true
