client3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client3
  labels:
    app: webserver
spec:
   containers:
    - name: client3
      image: gcr.io/google-samples/node-hello:1.0
      ports:
       - containerPort: 8080
         protocol: TCP
   nodeSelector:
     kubernetes.io/hostname: ovn-worker2
