debug-no-host.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  labels:
    app: MyApp
spec:      
  containers:
  - name: pod1
    imagePullPolicy: Always
    image: quay.io/astoycos/debug-network:latest
    command:
      - /sbin/init
  nodeSelector:
    kubernetes.io/hostname: ovn-worker
