test_deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: gcr.io/google-samples/node-hello:1.0
          ports:
            - containerPort: 8080
              type: TCP
              name: http
