test_deployment_external_ip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-externalip
spec:
  selector:
    matchLabels:
      app: webserver-externalip
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver-externalip
    spec:
      containers:
        - name: webserver2
          image: gcr.io/google-samples/node-hello:1.0
          ports:
            - containerPort: 8080
              name: http
