test_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-pod-test 
  labels:
    app: MyApp
spec:
  containers:
  - name: webserver
    image: gcr.io/google-samples/node-hello:1.0
    ports:
    - containerPort: 8080
      type: TCP
      name: http
  nodeSelector:
    kubernetes.io/hostname: ovn-worker
