test_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    app: webserver-agnhost-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
