test_service_externalIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-agnost
spec:
  externalIPs:
    - 172.18.0.13
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webserver-agnost
