test_service_externalIP_8081.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-agnost2
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: webserver-agnost
  type: LoadBalancer
