test_service_nodeport2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver2
spec:
  type: NodePort
  selector:
    app: webserver-agnost
  ports:
    - name: host-net
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: cluster-net
      protocol: TCP
      port: 8081
      targetPort: 8081
