test_service_nodeport_8081.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-nodeport
spec:
  type: NodePort
  selector:
    app: webserver-agnost
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
