allow_namespace.yaml
# ALLOW FROM SAME NAMESPACE
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
spec:
  podSelector: {}
  policyTypes: 
   - Ingress
   - Egress
  ingress:
    - from:
        - podSelector: {}
  egress: 
    - to:
        - podSelector: {}
