test_policy2.yaml
# ALLOW FROM SAME NAMESPACE
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hairpin
  namespace: test-network-policy
spec:
  podSelector: {}
  policyTypes:
   - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.96.0.0/16
